--- a/templates/posts/newsfeed.html
+++ b/templates/posts/newsfeed.html
@@ -224,6 +224,14 @@
 
               <!-- <img src="http://placehold.it/1920x1280" alt="post-image" class="img-responsive post-image" /> -->
               <div class="post-container">
+								{% if p.image %}
+								<p>image</p>
+
+								<img src="{{ p.image.url }}" alt="post-" class="img-responsive post-image" />
+						<!-- <img src="http://placehold.it/2000x1300" alt="post-image" class="img-responsive post-image" /> -->
+						{% else %}
+						<p>no image</p>
+								{% endif %}
                 <img src="http://placehold.it/300x300" alt="user" class="profile-photo-md pull-left" />
                 <div class="post-detail">
                   <div class="user-info">
@@ -410,13 +418,19 @@
 
             <!-- Post Content
             ================================================= -->
+						{% for p in pst %}
+
             <div class="post-content">
-              <img src="http://placehold.it/2000x1300" alt="post-image" class="img-responsive post-image" />
+									{% if p.image %}
+									<img src="{{ p.photo.url }}" alt="post-" class="img-responsive post-image" />
+              <!-- <img src="http://placehold.it/2000x1300" alt="post-image" class="img-responsive post-image" /> -->
+									{% endif %}
               <div class="post-container">
                 <img src="http://placehold.it/300x300" alt="user" class="profile-photo-md pull-left" />
                 <div class="post-detail">
+
                   <div class="user-info">
-                    <h5><a href="timeline.html" class="profile-link">John Doe</a> <span class="following">following</span></h5>
+                    <h5><a href="timeline.html" class="profile-link"></a> <span class="following">following</span></h5>
                     <p class="text-muted">Published a photo about 2 hour ago</p>
                   </div>
                   <div class="reaction">
@@ -442,6 +456,7 @@
                   </div>
                 </div>
               </div>
+							{% endfor %}
             </div>
 
             <!-- Post Content
