--- a/templates/posts/timeline.html
+++ b/templates/posts/timeline.html
@@ -94,7 +94,7 @@
                 <div class="profile-info">
                   <img src="http://placehold.it/300x300" alt="" class="img-responsive profile-photo" />
                   <h3>{{user.username}}</h3>
-                  <p class="text-muted">Creative Director</p>
+                  <p class="text-muted">following:{{x}}</p>
                 </div>
               </div>
               <div class="col-md-9">
@@ -105,7 +105,7 @@
                   <li><a href="timeline-friends.html">Friends</a></li>
                 </ul>
                 <ul class="follow-me list-inline">
-                  <li>1,299 people following her</li>
+                  <li>{{y}} followers </li>
                   <li><button class="btn-primary">Add Friend</button></li>
                 </ul>
               </div>
