sorted footer section

--- a/templates/posts/newsfeed.html
+++ b/templates/posts/newsfeed.html
@@ -347,7 +347,7 @@
 
             <!-- Post Content
             ================================================= -->
-            <div class="post-content">
+            <!-- <div class="post-content">
 							<div class="video-wrapper">
 								<video class="post-video" controls> <source src="{% static 'videos/1.mp4' %}" type="video/mp4"> </video>
 							</div>
@@ -389,7 +389,7 @@
 
             <!-- Post Content
             ================================================= -->
-            <div class="post-content">
+            <!-- <div class="post-content">
               <div class="post-container">
                 <img src="http://placehold.it/300x300" alt="user" class="profile-photo-md pull-left" />
                 <div class="post-detail">
@@ -416,18 +416,17 @@
                   </div>
                 </div>
               </div>
-            </div>
-
+            </div> -->
             <!-- Post Content
             ================================================= -->
-						{% for p in pst %}
+						<!-- {% for p in pst %}
 
             <div class="post-content">
 									{% if p.image %}
 									<img src="{{ p.photo.url }}" alt="post-" class="img-responsive post-image" />
               <!-- <img src="http://placehold.it/2000x1300" alt="post-image" class="img-responsive post-image" /> -->
-									{% endif %}
-              <div class="post-container">
+									<!-- {% endif %} -->
+              <!-- <div class="post-container">
                 <img src="http://placehold.it/300x300" alt="user" class="profile-photo-md pull-left" />
                 <div class="post-detail">
 
@@ -457,13 +456,13 @@
                     <input type="text" class="form-control" placeholder="Post a comment">
                   </div>
                 </div>
-              </div>
-							{% endfor %}
-            </div>
+              </div> -->
+							<!-- {% endfor %} -->
+            <!-- </div> -->
 
             <!-- Post Content
             ================================================= -->
-            <div class="post-content">
+            <!-- <div class="post-content">
               <div class="google-maps">
                 <div id="map" class="map"></div>
               </div>
@@ -497,7 +496,7 @@
 
             <!-- Post Content
             ================================================= -->
-            <div class="post-content">
+            <!-- <div class="post-content">
               <img src="http://placehold.it/1920x1160" alt="" class="img-responsive post-image" />
               <div class="post-container">
                 <img src="http://placehold.it/300x300" alt="user" class="profile-photo-md pull-left" />
@@ -526,7 +525,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- Newsfeed Common Side Bar Right
           <!-- ================================================= -->
