--- a/static/css/style.css
+++ b/static/css/style.css
@@ -863,7 +863,8 @@ textarea{
   ==================================================*/
 
 #lp-register{
-  background: linear-gradient(to right, rgba(0,0,0, 0.7) , rgba(0,0,0, 0.7)), url("http://placehold.it/1920x1280") fixed no-repeat;
+  background: linear-gradient(to right, rgba(0,0,0, 0.7) , rgba(0,0,0, 0.7)), url("../images/wb_500.png") fixed no-repeat;
+
   background-size: cover;
   background-position: center;
   position: absolute;
