--- a/templates/posts/login.html
+++ b/templates/posts/login.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="{% static 'css/emoji.css' %}" >
 		<link rel="stylesheet" href="{% static 'css/mediapost.css' %}" >
 		<link rel="stylesheet" href="{% static 'css/head.css' %}" >
+		<link rel="stylesheet" href="{% static 'css/morphext.css' %}" >
+
 
 
     <!--Google Font-->
@@ -34,50 +36,100 @@
 
     <!-- Header
     ================================================= -->
-    <header id="header">
-      <nav class="navbar navbar-default navbar-fixed-top menu">
-        <div class="container">
+		<header id="header">
+			<nav class="navbar navbar-default navbar-fixed-top menu">
+				<div class="container">
 
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index-register.html"><img src="{% static 'images/wb_168.png' %}" alt="logo" /></a>
-          </div>
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="index-register.html"><img src="{% static 'images/wb_black168.png' %}" alt="logo" /></a>
+					</div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <form class="navbar-form navbar-right hidden-sm">
-            <div class="form-group">
-              <i class="icon ion-android-search"></i>
-              <input type="text" class="form-control" placeholder="Search friends, photos, videos">
-            </div>
-          </form>
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right main-menu">
-              <li class="dropdown"><a href="{% url 'posts:post_create' %}">Home</a></li>
-              {% if request.user.is_authenticated %}
-              <li class="dropdown">
-                <a href="{% url 'posts:post_list' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
-                <ul class="dropdown-menu newsfeed-home">
-                  <li><a href="index.html">Landing Page 1</a></li>
-                 <li><a href="index-register.html">Landing Page 2</a></li>
-                 {% else %}
-                 <!-- <input type="submit" value="Create" class="btn btn-primary pull-right"> -->
+					<!-- Collect the nav links, forms, and other content for toggling -->
+					<form class="navbar-form navbar-right hidden-sm">
+						<div class="form-group">
+							<i class="icon ion-android-search"></i>
+							<input type="text" class="form-control" placeholder="Search friends, photos, videos">
+						</div>
+					</form>
+					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav navbar-right main-menu">
+							<li class="dropdown"><a href="{% url 'posts:post_create' %}">Home</a></li>
+							{% if request.user.is_authenticated %}
+							<li class="dropdown">
+								<a href="{% url 'posts:post_list' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hey {{ request.user|capfirst }} <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+								<ul class="dropdown-menu newsfeed-home">
+								</li><a class="dropdown-item" href="{% url 'accounts:user_logout' %}">Logout</a>
 
-                 <li class="btn btn-primary pull-right"><a href="{% url 'posts:post_create' %}">signup</a></li>
+									<!-- <li><a href="index.html">Landing Page 1</a></li> -->
+								 <!-- <li><a href="index-register.html">Landing Page 2</a></li> -->
+								 {% else %}
+								 <!-- <input type="submit" value="Create" class="btn btn-primary pull-right"> -->
 
-  {% endif %}
+								 <li class="btn btn-primary pull-right"><a href="{% url 'accounts:user_login' %}">signup</a></li>
 
-                </ul>
-              </li>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container -->
-        </nav>
-      </header>
+{% endif %}
+
+								</ul>
+							</li>
+							<!-- <li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+								<ul class="dropdown-menu newsfeed-home">
+									<li><a href="newsfeed.html">Newsfeed</a></li>
+									<li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
+									<li><a href="newsfeed-friends.html">My friends</a></li>
+									<li><a href="newsfeed-messages.html">Chatroom</a></li>
+									<li><a href="newsfeed-images.html">Images</a></li>
+									<li><a href="newsfeed-videos.html">Videos</a></li>
+								</ul>
+							</li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Timeline <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+								<ul class="dropdown-menu login">
+									<li><a href="timeline.html">Timeline</a></li>
+									<li><a href="timeline-about.html">Timeline About</a></li>
+									<li><a href="timeline-album.html">Timeline Album</a></li>
+									<li><a href="timeline-friends.html">Timeline Friends</a></li>
+									<li><a href="edit-profile-basic.html">Edit: Basic Info</a></li>
+									<li><a href="edit-profile-work-edu.html">Edit: Work</a></li>
+									<li><a href="edit-profile-interests.html">Edit: Interests</a></li>
+									<li><a href="edit-profile-settings.html">Account Settings</a></li>
+									<li><a href="edit-profile-password.html">Change Password</a></li>
+								</ul>
+							</li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+								<ul class="dropdown-menu page-list">
+									<li><a href="index.html">Landing Page 1</a></li>
+									<li><a href="index-register.html">Landing Page 2</a></li>
+									<li><a href="newsfeed.html">Newsfeed</a></li>
+									<li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
+									<li><a href="newsfeed-friends.html">My friends</a></li>
+									<li><a href="newsfeed-messages.html">Chatroom</a></li>
+									<li><a href="newsfeed-images.html">Images</a></li>
+									<li><a href="newsfeed-videos.html">Videos</a></li>
+									<li><a href="timeline.html">Timeline</a></li>
+									<li><a href="timeline-about.html">Timeline About</a></li>
+									<li><a href="timeline-album.html">Timeline Album</a></li>
+									<li><a href="timeline-friends.html">Timeline Friends</a></li>
+									<li><a href="edit-profile-basic.html">Edit Profile</a></li>
+									<li><a href="post_list">c</a></li>
+									<li><a href="faq.html">FAQ Page</a></li>
+									<li><a href="404.html">404 Not Found</a></li>
+								</ul>
+							</li> -->
+						<!-- </ul> -->
+
+					</div><!-- /.navbar-collapse -->
+				</div><!-- /.container -->
+			</nav>
+		</header>
                   <div class="alert alert-warning alert-dismissible fade show" role="alert">
               <strong>Holy guacamole!</strong> You should check in on some of those fields below.
               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -92,9 +144,10 @@
           <div class="row">
             <div class="col-sm-5">
               <div class="intro-texts">
-                <h1 class="text-white">Make Cool Friends !!!</h1>
-                <p>Friend Finder is a social network template that can be used to connect people. The template offers Landing pages, News Feed, Image/Video Feed, Chat Box, Timeline and lot more. <br /> <br />Why are you waiting for? Buy it now.</p>
-                <button class="btn btn-primary">Learn More</button>
+                <h1 class="text-white"> A Platform <span id="js-rotating">FOR,TO,BY</span> Students !!
+</h1>
+                <p> WiringBridge is a social network  that can be used to connect students. The platform makes the connection between various students and provide students with endless oppurtunities <br /> <br />Why are you waiting for?</p>
+                <!-- <button class="btn btn-primary">Learn More</button> -->
               </div>
             </div>
             <div class="col-sm-6 col-sm-offset-1">
@@ -157,19 +210,19 @@
                     <h3>Register Now !!!</h3>
                     <p class="text-muted">Be cool and join today. Meet millions</p>
 
-                   
+
                     <form method="post">
                        {% csrf_token %}
                                 <div class="form-group">
                                     <label for="username">Username</label>
                                     <input type="text" class="form-control" id="username" name="username" required="required" placeholder="Enter username">
-                                    
+
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Email address</label>
                                     <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="Enter email">
                                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                                    
+
                                 </div>
                                 <div class="form-group">
                                     <label for="exampleInputPassword1">Password</label>
@@ -180,11 +233,11 @@
                                     <label for="exampleInputPassword2">Confirm Password</label>
                                     <input type="password" class="form-control" minlength="6"  id="exampleInputPassword2" name="password2" required="required" placeholder="Enter Confirm Password">
                                 </div>
-                               
+
                                {% comment %} <input type='submit' name='submit' value='sign_up'> {% endcomment %}
                                <input type='submit'  name='submit' class='btn btn-primary' value='Register'>
                        </form>
-                    
+
                   </div><!--Registration Form Contents Ends-->
 
                   <!--Login-->
@@ -269,13 +322,15 @@
       <script src="{% static 'js/script.js' %}"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-      
+
       <script src="{% static 'js/jquery.sticky-kit.min.js' %}"></script>
       <script src="{% static 'js/jquery.scrollbar.min.js' %}"></script>
       <script src="{% static 'js/script.js' %}"></script>
       <script src="{% static 'js/mediapost.js' %}"></script>
       <script src="{% static 'js/post.js' %}"></script>
       <script src="{% static 'js/like.js' %}"></script>
+			<script src="{% static 'js/morphext.min.js' %}"></script>
+
 
       <!-- <script src="js/jquery-3.1.1.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
