--- a/templates/posts/timeline.html
+++ b/templates/posts/timeline.html
@@ -34,7 +34,7 @@
 
     <!-- Header
     ================================================= -->
-    <header id="header">
+		<header id="header">
       <nav class="navbar navbar-default navbar-fixed-top menu">
         <div class="container">
 
@@ -46,38 +46,88 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index-register.html"><img src="{% static 'images/wb_168.png' %}" alt="logo" /></a>
+            <a class="navbar-brand" href="index-register.html"><img src="{% static 'images/wb_black168.png' %}" alt="logo" /></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
-          <form class="navbar-form navbar-right hidden-sm">
-            <div class="form-group">
-              <i class="icon ion-android-search"></i>
-              <input type="text" class="form-control" placeholder="Search friends, photos, videos">
-            </div>
-          </form>
+					<form class="navbar-form navbar-right hidden-sm">
+						<div class="form-group">
+							<i class="icon ion-android-search"></i>
+							<input type="text" class="form-control" placeholder="Search friends, photos, videos">
+						</div>
+					</form>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right main-menu">
-              <li class="dropdown"><a href="{% url 'posts:post_create' %}">Home</a></li>
-              {% if request.user.is_authenticated %}
+							<li class="dropdown"><a href="{% url 'posts:post_create' %}">Home</a></li>
+							{% if request.user.is_authenticated %}
               <li class="dropdown">
-                <a href="{% url 'posts:post_list' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+                <a href="{% url 'posts:post_list' %}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hey {{ request.user|capfirst }} <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
                 <ul class="dropdown-menu newsfeed-home">
-                  <li><a href="index.html">Landing Page 1</a></li>
-                 <li><a href="index-register.html">Landing Page 2</a></li>
-                 {% else %}
-                 <!-- <input type="submit" value="Create" class="btn btn-primary pull-right"> -->
+								</li><a class="dropdown-item" href="{% url 'accounts:user_logout' %}">Logout</a>
 
-                 <li class="btn btn-primary pull-right"><a href="{% url 'posts:post_create' %}">signup</a></li>
+                  <!-- <li><a href="index.html">Landing Page 1</a></li> -->
+                 <!-- <li><a href="index-register.html">Landing Page 2</a></li> -->
+								 {% else %}
+								 <!-- <input type="submit" value="Create" class="btn btn-primary pull-right"> -->
 
-  {% endif %}
+								 <li class="btn btn-primary pull-right"><a href="{% url 'accounts:user_login' %}">signup</a></li>
+
+{% endif %}
 
                 </ul>
               </li>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container -->
-        </nav>
-      </header>
+              <!-- <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+                <ul class="dropdown-menu newsfeed-home">
+                  <li><a href="newsfeed.html">Newsfeed</a></li>
+                  <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
+                  <li><a href="newsfeed-friends.html">My friends</a></li>
+                  <li><a href="newsfeed-messages.html">Chatroom</a></li>
+                  <li><a href="newsfeed-images.html">Images</a></li>
+                  <li><a href="newsfeed-videos.html">Videos</a></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Timeline <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+                <ul class="dropdown-menu login">
+                  <li><a href="timeline.html">Timeline</a></li>
+                  <li><a href="timeline-about.html">Timeline About</a></li>
+                  <li><a href="timeline-album.html">Timeline Album</a></li>
+                  <li><a href="timeline-friends.html">Timeline Friends</a></li>
+                  <li><a href="edit-profile-basic.html">Edit: Basic Info</a></li>
+                  <li><a href="edit-profile-work-edu.html">Edit: Work</a></li>
+                  <li><a href="edit-profile-interests.html">Edit: Interests</a></li>
+                  <li><a href="edit-profile-settings.html">Account Settings</a></li>
+                  <li><a href="edit-profile-password.html">Change Password</a></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="{% static 'images/down-arrow.png' %}" alt="" /></span></a>
+                <ul class="dropdown-menu page-list">
+                  <li><a href="index.html">Landing Page 1</a></li>
+                  <li><a href="index-register.html">Landing Page 2</a></li>
+                  <li><a href="newsfeed.html">Newsfeed</a></li>
+                  <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
+                  <li><a href="newsfeed-friends.html">My friends</a></li>
+                  <li><a href="newsfeed-messages.html">Chatroom</a></li>
+                  <li><a href="newsfeed-images.html">Images</a></li>
+                  <li><a href="newsfeed-videos.html">Videos</a></li>
+                  <li><a href="timeline.html">Timeline</a></li>
+                  <li><a href="timeline-about.html">Timeline About</a></li>
+                  <li><a href="timeline-album.html">Timeline Album</a></li>
+                  <li><a href="timeline-friends.html">Timeline Friends</a></li>
+                  <li><a href="edit-profile-basic.html">Edit Profile</a></li>
+                  <li><a href="post_list">c</a></li>
+                  <li><a href="faq.html">FAQ Page</a></li>
+                  <li><a href="404.html">404 Not Found</a></li>
+                </ul>
+              </li> -->
+            <!-- </ul> -->
+
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container -->
+      </nav>
+    </header>
     <!--Header End-->
 
     <div class="container">
