--- a/templates/posts/newsfeed.html
+++ b/templates/posts/newsfeed.html
@@ -247,6 +247,7 @@
 {{cmt.user}}
 {% endfor %}
 
+
                   <div class="reaction"  >
                   <button type="button" data-href="{% url 'posts:like_post' p.id %}"> <a class="btn text-green" ><i class="icon ion-thumbsup"></i> </a></button>
                     <a class="btn text-red"><i class="fa fa-thumbs-down"></i> 0</a>
@@ -584,7 +585,7 @@
 
     <!-- Footer
     ================================================= -->
-    <footer id="footer">
+    <!-- <footer id="footer">
       <div class="container">
       	<div class="row">
           <div class="footer-wrapper">
@@ -640,7 +641,7 @@
             </div>
           </div>
       	</div>
-      </div>
+      </div> -->
       <div class="copyright">
         <p>Made with &#10084;	 by <a href="#">Enzymes</a>.</p>
       </div>
